<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_registration">Registration</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="username_hint">Enter Username</string>
    <string name="password_hint">Enter Password</string>
    <string name="name_hint">Enter Your Name</string>
    <string name="email_hint">Enter Email Address</string>
    <string name="login_text">Login</string>
    <string name="register_text">Register</string>
</resources>
